Encounters table added. Encounters rendering
